--- a/shows.html
+++ b/shows.html
@@ -118,146 +118,27 @@
         </div>
         <div class="list__title">
             <div class="list__title__picture">
-                <img src="images/tv shows/better_call_saul.jpg" alt="Better Call Saul">
-                <div class="list__title__rating">95%</div>
+                <img src="images/tv shows/mr_robot.jpg" alt="Mr. Robot">
+                <div class="list__title__rating">94%</div>
             </div>
             <div class="list__title__description">
-                <div class="list__title__description__name">Better Call Saul</div>
-                Year: 2015 - 2022<br>
-                Director: Vince Gilligan<br>
-                Actors: Bob Odenkirk...
+                <div class="list__title__description__name">Mr. Robot</div>
+                Year: 2015 - 2019<br>
+                Director: Sam Esmail<br>
+                Actors: Rami Malek, Christian Slater...
             </div>
         </div>
+        
         <div class="list__title">
             <div class="list__title__picture">
-                <img src="images/tv shows/breaking_bad.jpg" alt="Breaking Bad">
-                <div class="list__title__rating">99%</div>
+                <img src="images/tv shows/the_last_of_us.jpg" alt="The Last of Us">
+                <div class="list__title__rating">96%</div>
             </div>
             <div class="list__title__description">
-                <div class="list__title__description__name">Breaking Bad</div>
-                Year: 2008 - 2013<br>
-                Director: Vince Gilligan<br>
-                Actors: Bryan Cranston...
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/true_detective.jpg" alt="True Detective">
-                <div class="list__title__rating">90%</div>
-            </div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">True Detective</div>
-                Year: 2014 - <br>
-                Director: Cary Joji Fukunaga<br>
-                Actors: Woody Harrelson...
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/twd.webp" alt="The Walking Dead">
-                <div class="list__title__rating">84%</div>
-            </div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">The Walking Dead</div>
-                Year: 2010 - 2022<br>
-                Director:  Frank Darabont<br>
-                Actors: Andrew Lincoln...
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/better_call_saul.jpg" alt="Better Call Saul">
-                <div class="list__title__rating">95%</div>
-            </div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">Better Call Saul</div>
-                Year: 2015 - 2022<br>
-                Director: Vince Gilligan<br>
-                Actors: Bob Odenkirk...
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/breaking_bad.jpg" alt="Breaking Bad">
-                <div class="list__title__rating">99%</div>
-                <div class="list__title__description">
-                </div>
-                <div class="list__title__description">
-                    <div class="list__title__description__name">Breaking Bad</div>
-                    Year: 2008 - 2013<br>Director: Vince Gilligan<br>Actors: Bryan Cranston...
-                </div>
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/true_detective.jpg" alt="True Detective">
-                <div class="list__title__rating">90%</div>
-            </div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">True Detective</div>
-                Year: 2014 - <br>
-                Director: Cary Joji Fukunaga<br>
-                Actors: Woody Harrelson...
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/twd.webp" alt="The Walking Dead">
-                <div class="list__title__rating">84%</div>
-            </div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">The Walking Dead</div>
-                Year: 2010 - 2022<br>
-                Director:  Frank Darabont<br>
-                Actors: Andrew Lincoln...
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/better_call_saul.jpg" alt="Better Call Saul">
-                <div class="list__title__rating">95%</div>
-            </div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">Better Call Saul</div>
-                Year: 2015 - 2022<br>
-                Director: Vince Gilligan<br>
-                Actors: Bob Odenkirk...
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/breaking_bad.jpg" alt="Breaking Bad">
-                <div class="list__title__rating">99%</div>
-                <div class="list__title__description">
-                </div>
-                <div class="list__title__description">
-                    <div class="list__title__description__name">Breaking Bad</div>
-                    Year: 2008 - 2013<br>Director: Vince Gilligan<br>Actors: Bryan Cranston...
-                </div>
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/true_detective.jpg" alt="True Detective">
-                <div class="list__title__rating">90%</div>
-            </div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">True Detective</div>
-                Year: 2014 - <br>
-                Director: Cary Joji Fukunaga<br>
-                Actors: Woody Harrelson...
-            </div>
-        </div>
-        <div class="list__title">
-            <div class="list__title__picture">
-                <img src="images/tv shows/twd.webp" alt="The Walking Dead">
-                <div class="list__title__rating">84%</div>
-            </div>
-            <div class="list__title__description">
-                <div class="list__title__description__name">The Walking Dead</div>
-                Year: 2010 - 2022<br>
-                Director:  Frank Darabont<br>
-                Actors: Andrew Lincoln...
+                <div class="list__title__description__name">The Last of Us</div>
+                Year: 2023 - present<br>
+                Director: Craig Mazin, Neil Druckmann<br>
+                Actors: Pedro Pascal, Bella Ramsey...
             </div>
         </div>
     </div>
