--- a/article.html
+++ b/article.html
@@ -79,66 +79,69 @@
             <h2>Other comments</h2>
         </header>
         <aside class="article__comments">
-                    <div class="article__comments__comment">
-                        <header>
-                            <span>BuilderBob</span>
-                            <span>December 18th, 2024, 10:23 AM</span>
-                        </header>
-                        <p>This is amazing news! I can't wait to see what new features Minecraft 2 will bring. I hope
-                            it's something completely different from what we know, but still keeps the magic that
-                            Minecraft has.</p>
-                    </div>
+            <div class="article__comments__comment">
+                <header>
+                    <span>BuilderBob</span>
+                    <span>December 18th, 2024, 10:23 AM</span>
+                </header>
+                <p>This is amazing news! I can't wait to see what new features Minecraft 2 will bring. I hope
+                    it's something completely different from what we know, but still keeps the magic that
+                    Minecraft has.</p>
+            </div>
 
-                    <div class="article__comments__comment">
-                        <header>
-                            <span>RedstoneWizard</span>
-                            <span>December 17th, 2024, 5:42 PM</span>
-                        </header>
-                        <p>As a long-time Minecraft player, I'm thrilled about this announcement. I'm looking forward to
-                            new blocks, mobs, and creative building possibilities. Hopefully, we'll also get better
-                            multiplayer options.</p>
-                    </div>
+            <div class="article__comments__comment">
+                <header>
+                    <span>RedstoneWizard</span>
+                    <span>December 17th, 2024, 5:42 PM</span>
+                </header>
+                <p>As a long-time Minecraft player, I'm thrilled about this announcement. I'm looking forward to
+                    new blocks, mobs, and creative building possibilities. Hopefully, we'll also get better
+                    multiplayer options.</p>
+            </div>
 
-                    <div class="article__comments__comment">
-                        <header>
-                            <span>SkepticSteve</span>
-                            <span>December 18th, 2024, 3:17 PM</span>
-                        </header>
-                        <p>Do we really need Minecraft 2? I'm not sure what could be better than the current version.
-                            Maybe they should focus on improving and expanding what we already have.</p>
-                    </div>
+            <div class="article__comments__comment">
+                <header>
+                    <span>SkepticSteve</span>
+                    <span>December 18th, 2024, 3:17 PM</span>
+                </header>
+                <p>Do we really need Minecraft 2? I'm not sure what could be better than the current version.
+                    Maybe they should focus on improving and expanding what we already have.</p>
+            </div>
 
-                    <div class="article__comments__comment">
-                        <header>
-                            <span>Survivalist42</span>
-                            <span>December 16th, 2024, 11:29 AM</span>
-                        </header>
-                        <p>Minecraft 2? That sounds like the beginning of an endless cycle of sequels. I'd rather see
-                            the developers focus on fixing bugs and adding new content to the existing version.</p>
-                    </div>
+            <div class="article__comments__comment">
+                <header>
+                    <span>Survivalist42</span>
+                    <span>December 16th, 2024, 11:29 AM</span>
+                </header>
+                <p>Minecraft 2? That sounds like the beginning of an endless cycle of sequels. I'd rather see
+                    the developers focus on fixing bugs and adding new content to the existing version.</p>
+            </div>
 
-                    <div class="article__comments__comment">
-                        <header>
-                            <span>Modder_Joe</span>
-                            <span>December 18th, 2024, 10:42 AM</span>
-                        </header>
-                        <p>As a mod creator, I see huge potential in Minecraft 2. I'm excited to be able to create new
-                            and interesting things in this new environment. I hope the developers provide good tools for
-                            modders.</p>
-                    </div>
+            <div class="article__comments__comment">
+                <header>
+                    <span>Modder_Joe</span>
+                    <span>December 18th, 2024, 10:42 AM</span>
+                </header>
+                <p>As a mod creator, I see huge potential in Minecraft 2. I'm excited to be able to create new
+                    and interesting things in this new environment. I hope the developers provide good tools for
+                    modders.</p>
+            </div>
 
-                    <div class="article__comments__comment">
-                        <header>
-                            <span>NewPlayer</span>
-                            <span>December 17th, 2024, 5:29 PM</span>
-                        </header>
-                        <p>As a new Minecraft player, this announcement caught me off guard. I haven't even explored all
-                            the possibilities of the first game yet. But I'm curious to see what Minecraft 2 will offer
-                            me.</p>
-                    </div>
-                </section>
+            <div class="article__comments__comment">
+                <header>
+                    <span>NewPlayer</span>
+                    <span>December 17th, 2024, 5:29 PM</span>
+                </header>
+                <p>As a new Minecraft player, this announcement caught me off guard. I haven't even explored all
+                    the possibilities of the first game yet. But I'm curious to see what Minecraft 2 will offer
+                    me.</p>
+            </div>
+            </section>
         </aside>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
