--- a/breaking_bad.html
+++ b/breaking_bad.html
@@ -38,10 +38,10 @@
                 <button onclick="openEpisodes()">Episodes</button>
             </div>
             <div class="title__description__info">
-                <span id="title__description__info--bold">First episode:</span> January 20, 2008<br>
-                <span id="title__description__info--bold">Last episode:</span> September 29, 2013<br>
-                <span id="title__description__info--bold">Created by:</span> Vince Gilligan<br>
-                <span id="title__description__info--bold">Cast:</span> Bryan Cranston, Aaron Paul, Anna Gunn, Dean Norris, Betsy Brandt, RJ Mitte, Bob Odenkirk, Giancarlo Esposito<br><br>
+                <span id="title__description--bold">First episode:</span> January 20, 2008<br>
+                <span id="title__description--bold">Last episode:</span> September 29, 2013<br>
+                <span id="title__description--bold">Created by:</span> Vince Gilligan<br>
+                <span id="title__description--bold">Cast:</span> Bryan Cranston, Aaron Paul, Anna Gunn, Dean Norris, Betsy Brandt, RJ Mitte, Bob Odenkirk, Giancarlo Esposito<br><br>
             </div>
 
             <p class="title__description__about">Breaking Bad tells the story of Walter White, a high school chemistry teacher turned methamphetamine manufacturer. Facing a terminal cancer diagnosis, he partners with former student Jesse Pinkman to secure his family's financial future, but their descent into the criminal underworld has devastating consequences.</p>
@@ -180,6 +180,9 @@
             </div>
         </div>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
