--- a/index.html
+++ b/index.html
@@ -239,6 +239,10 @@
             #login_under_ul {
                 display: none;
             }
+            .left, .right {
+
+                margin: 2px;
+            }
         }
 
         @media screen and (min-width: 617px) {
@@ -517,7 +521,7 @@
         </article>
     </div>
     <footer>
-        &copy;Created in 2024
+        
     </footer>
 </body>
 
