--- a/shows.html
+++ b/shows.html
@@ -99,7 +99,7 @@
             </div>
             <div class="list__title__description">
                 <div class="list__title__description__name">True Detective</div>
-                Year: 2014 - <br>
+                Year: 2014 - present<br>
                 Director: Cary Joji Fukunaga<br>
                 Actors: Woody Harrelson...
             </div>
@@ -125,7 +125,7 @@
                 <div class="list__title__description__name">Mr. Robot</div>
                 Year: 2015 - 2019<br>
                 Director: Sam Esmail<br>
-                Actors: Rami Malek, Christian Slater...
+                Actors: Rami Malek...
             </div>
         </div>
         
@@ -137,8 +137,8 @@
             <div class="list__title__description">
                 <div class="list__title__description__name">The Last of Us</div>
                 Year: 2023 - present<br>
-                Director: Craig Mazin, Neil Druckmann<br>
-                Actors: Pedro Pascal, Bella Ramsey...
+                Director: Craig Mazin...<br>
+                Actors: Pedro Pascal...
             </div>
         </div>
     </div>
