--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         }
 
         footer {
-            background-color: var(--color-element-A);
+            background-color: var(--color-background-B);
             height: 5vh;
             color: white;
         }
